# nav_infrastructure_simple

./: .gitignore  .gitmodules  Dockerfile  README.md  pyproject.toml  requirements.txt  test.py
.github/workflows/: checks.yml  docker-build.yml  test.yml
autonav_goal_selection/: README.md  package.xml  setup.py
goal_selection/: package.xml  setup.cfg  setup.py  waypoints.json
gps_odom_fusion/: package.xml  setup.cfg  setup.py
gps_publisher/: README.md  package.xml  setup.py
localization/: README.md  package.xml  setup.py
localization/launch/: launch.py
localization_simulator/: README.md  package.xml  setup.cfg  setup.py
localization_simulator/localization_simulator/: localization_simulator.py  localization_simulator_config.py
nav_bringup/: README.md  package.xml  setup.py
nav_infrastructure_launch/: package.xml  setup.cfg  setup.py
nav_utils/: README.md  package.xml  setup.cfg  setup.py
north_south/: package.xml  setup.cfg  setup.py
occupancy_grid_transform/: README.md  package.xml  setup.cfg  setup.py
path_planning/: package.xml  setup.py
path_tracking/: README.md  package.xml  setup.cfg  setup.py
point_simulator/: package.xml  setup.cfg  setup.py
scripts/: build.sh  check.sh  checks.sh  create-device-alias.sh  create-package.sh  fix.sh  format-lint.sh  format.sh  print_imu_yaw.py  remove-device-alias.sh  setup.sh  test.sh
self_drive_goal_selection/: README.md  package.xml  setup.cfg  setup.py
sensor_simulator/: package.xml  setup.py
state_machine/: README.md  package.xml  setup.py
teleop/: README.md  package.xml  setup.py
(+75 files in other folders)
